[package]
name = "cardgame"
version = "0.1.0"
edition = "2024"
authors = ["Erik Nordstroem <erik@nordstroem.no>"]

[dependencies]
strum = { workspace = true, features = ["derive"] }
arrayvec.workspace = true
newtype_derive.workspace = true
rand.workspace = true

[dev-dependencies]
test-case.workspace = true
