[package]
name = "cardgame"
version = "0.1.0"
edition = "2024"
authors = ["Erik Nordstroem <erik@nordstroem.no>"]

[dependencies]
arrayvec.workspace = true
bitfield-struct.workspace = true
newtype_derive.workspace = true
rand.workspace = true
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
test-case.workspace = true
